src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_active_queries_with_data.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 🔍  Queries [2] ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│PID      Query                                              User             Database          Duration State             Wait            │
│12346    UPDATE orders SET status = 'shipped'               admin            production        3m45s    idle-txn          ClientRead      │
│12345    SELECT * FROM users WHERE id = $1                  app_user         production        5.5s     active            DataFileRead    │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
