src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_blocking_empty.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 600
expression: buffer_to_string(&terminal)
---
╭ Blocking Chains ─────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  No blocking detected                                                                            │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
