src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_blocking_extreme_values.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 🔒  Blocking ─────────────────────────────────────────────────────────────────────────────────────╮
│Blocker     Blocked  Duration  Blocker Query                                                      │
│2        →  1        0.0s      -                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
