src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_blocking_no_snapshot.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 🔒  Blocking ─────────────────────────────────────────────────────────────────────────────────────╮
│No data                                                                                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
