src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_blocking_with_data.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 587
expression: buffer_to_string(&terminal)
---
╭ Blocking Chains ─────────────────────────────────────────────────────────────────────────────────╮
│Blocker     Blocked  Duration  Blocker Query                                                      │
│12346    →  12347    8.5s      UPDATE orders SET status = 'shipped'                               │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
