src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_extensions_with_data.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ Extensions [4] ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Name                                               Version    Schema       Relocatable  Description                                       │
│pg_stat_statements                                 1.10       public       No           Track execution statistics of all SQL statements  │
│pgcrypto                                           1.3        public       Yes          Cryptographic functions                           │
│uuid-ossp                                          1.1        extensions   Yes          Generate universally unique identifiers (UUIDs)   │
│postgis                                            3.3.2      public       No           PostGIS geometry and geography spatial types an...│
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
